--- a/package.json
+++ b/package.json
@@ -6,7 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
+  },
+  "jest": {
+    "clearMocks": true,
+    "verbose": true,
+    "globals": {
+      "ts-jest": {
+        "tsconfig": "tsconfig.json"
+      }
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.ts"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "testEnvironment": "jsdom"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.7",
@@ -25,12 +42,26 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@jest/types": "^28.1.3",
     "@redux-devtools/core": "^3.13.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/axios": "^0.14.0",
+    "@types/jest": "^28.1.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.25",
     "@vitejs/plugin-react": "^2.0.0",
+    "babel-loader": "^8.2.5",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "jest-styled-components": "^7.1.0",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
   }
